# CMake_test

./: CMakeLists.txt  LICENSE  README.md
include/: liba.h  libb.h
main/: main.c
src/: liba.c  libb.c
